--- a/css/style.css
+++ b/css/style.css
@@ -41,6 +41,7 @@ header{
     /* background-color: white; */
     font-size: 1rem;
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     column-gap: 9.375rem;
@@ -122,7 +123,7 @@ li{
     justify-content: center;
 }
 .card{
-    height: 500px;
+    height: 31.25rem;
     margin: 30px;
     background-color: white;
 }
@@ -131,6 +132,7 @@ li{
 }
 .categorias {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-evenly;
 }
 .boton a{
@@ -170,4 +172,17 @@ main{
     ". main main main main ."
     "footer footer footer footer footer footer"    
     ;
+}
+
+@media(max-width: 768px){
+    header img{
+        display: none;
+    }
+    .categorias a img{ 
+        height: 3.125rem;
+        width: 3.125rema;
+    }
+    .categorias span{
+        font-size: .9375rem;
+    }
 }
