retoque mediaqueries para tienda e index.html

--- a/css/style.css
+++ b/css/style.css
@@ -202,9 +202,35 @@ main{
 }
 
 /* INICIO DE MEDIA QUERIES */
+@media(max-width:971px){
+    header{
+        display: flex;
+        flex-direction: row;
+        justify-content:space-between;
+    }
+    header img{
+        height: 9.375rem;
+        width: 9.375rem;
+    }
+}
+@media(max-width:913px){
+    header img{
+        height: 9.375rem;
+        width: 9.375rem;
+    }
+    header{
+        display: flex;
+        flex-wrap: nowrap;
+    }
+
+}
 @media(max-width: 768px){
     header img{
         display: none;
+    }
+    header{
+        display: flex;
+        justify-content: space-around;
     }
     .categorias a img{ 
         height: 3.125rem;
@@ -227,12 +253,15 @@ main{
     .icon{
         color:#003432;
     }
-    .logo{
-        display: none;
-    }
     footer span{
         font-size: .625rem;
         margin-right: .3125rem;
+    }
+}
+@media(max-width:657px){
+    header{
+        display: flex;
+        flex-wrap: wrap;
     }
 }
 @media(max-width:425px){
