--- a/css/style.css
+++ b/css/style.css
@@ -121,10 +121,11 @@ ul li a {
   margin: 0.625rem;
   display: flex;
   align-items: baseline;
+  transform: all, 0.7s;
 }
 ul li a:hover {
+  transform: scale(1.05);
   color: rgb(255, 166, 0);
-  font-size: 1.25rem;
 }
 
 .icon {
@@ -163,21 +164,23 @@ ul li a:hover {
   color: white;
   text-decoration: none;
   padding: 0.1875rem;
+  transition: all, 0.7s;
 }
 .boton a {
   background-color: #003432;
   color: white;
   text-decoration: none;
   font-size: 1.5625rem;
+  transition: all, 0.7s;
 }
 .boton a:hover {
   background-color: rgb(255, 166, 0);
-  font-size: 1.875rem;
+  transform: scale(1.05);
   border-radius: 0.375rem;
 }
 .boton:hover {
   background-color: rgb(255, 166, 0);
-  font-size: 1.25rem;
+  transform: scale(1.05);
   border-radius: 0.375rem;
 }
 
