--- a/scss/style.scss
+++ b/scss/style.scss
@@ -116,9 +116,10 @@ ul{
                 margin: .625rem;
                 display: flex;
                 align-items: baseline;
+                transform: all, 0.7s;
                     &:hover{
-                        color: rgb(255, 166, 0);
-                        font-size: 1.25rem;
+                    transform:scale(1.05);
+                    color: rgb(255, 166, 0);
                     }
             }
         };
@@ -155,20 +156,22 @@ ul{
     color: white;
     text-decoration: none;
     padding: .1875rem;
+    transition: all, 0.7s;
         a{
             background-color: #003432;
             color: white;
             text-decoration: none;
             font-size: 1.5625rem;
+            transition: all, 0.7s;
                 &:hover{
                     background-color:rgb(255, 166, 0);
-                    font-size: 1.875rem;
+                    transform: scale(1.05);
                     border-radius: .375rem;
                 }
         }
         &:hover{
-            background-color: rgb(255, 166, 0);
-            font-size: 1.25rem;
+            background-color:rgb(255, 166, 0);
+            transform: scale(1.05);
             border-radius: .375rem;
         }
 }
