--- a/css/style.css
+++ b/css/style.css
@@ -19,7 +19,6 @@ header {
   grid-area: header;
   font-size: 1rem;
   display: flex;
-  flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
   column-gap: 9.375rem;
@@ -93,9 +92,6 @@ form fieldset {
 .index_main div {
   height: 100%;
 }
-.index_main div img {
-  height: 38.125rem;
-}
 .index_main div span {
   display: flex;
   align-items: flex-end;
@@ -162,6 +158,7 @@ ul li a:hover {
 .boton {
   background-color: #003432;
   color: white;
+  border-radius: 0.375rem;
   text-decoration: none;
   padding: 0.1875rem;
   transition: all, 0.7s;
@@ -184,14 +181,18 @@ ul li a:hover {
   border-radius: 0.375rem;
 }
 
-.nosotros {
+main .nosotros {
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
   row-gap: 0.625rem;
 }
-.nosotros div {
+main .nosotros p {
+  margin-left: 0.625rem;
+  margin-right: 0.625rem;
+}
+main .nosotros div {
   display: flex;
   column-gap: 0.625rem;
 }
@@ -234,6 +235,9 @@ ul li a:hover {
   header img {
     display: none;
   }
+  footer img {
+    display: none;
+  }
   .categorias span {
     font-size: 0.9375rem;
   }
@@ -270,8 +274,8 @@ ul li a:hover {
     flex-direction: column;
     justify-content: center;
   }
-  .index_main {
-    margin: 0.3125rem 0px;
+  main {
+    margin: 0;
   }
   .index_main div {
     width: 100%;
@@ -286,6 +290,9 @@ ul li a:hover {
     margin-right: 0.3125rem;
   }
   footer div span {
+    display: none;
+  }
+  footer div img {
     display: none;
   }
   footer div ul li {
