--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,125 +1,20 @@
-$background-principal: rgba(255, 255, 255, 0.651);
-$element-hover: rgb(255, 166, 0);
-$dark-background:#003432;
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap');
-*{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
-}
-body{
-    background-image: url(../assets/img/background.png);
-    color: 003432;
-    font-family: 'Playfair Display', serif;
-}
-header{
-    background-color: $background-principal;
-    font-size: 1rem;
-    overflow: hidden;
-    margin: 0px 0px 1.25rem 0px;
-    grid-area: header;
-    font-size: 1rem;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    column-gap: 9.375rem;
-    nav{
-        margin:.625rem;
-        grid-area: nav;
-        display: flex;
-        justify-content: center;
-    }
-}
+@import "./utilities/variables";
+@import "./utilities/mediaqueries";
+@import "./base/reset";
+@import "./base/typo";
+@import "./base/grids";
+@import "./layout/header";
+@import "./layout/main";
+@import "./layout/footer";
+@import "./components/formularios";
+@import "./components/listas";
+@import "./components/botons";
+
 section{
     background-color: $background-principal;
     font-size: 1rem;
     overflow: hidden;
     margin: 1.25rem 0px;
-}
-main{
-    background-color: $background-principal;
-    font-size: 1rem;
-    margin: 1.25rem 0px;
-    grid-area: main;
-}
-footer{
-    background-color: $background-principal;
-    font-size: 1rem;
-    overflow: hidden;
-    margin: 1.25rem 0px;
-    grid-area: footer;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    position:relative;
-        div{
-            ul{
-                display: flex;
-            }
-        }
-}
-.grid{
-    background-image: url(../assets/img/background.png);
-    background-repeat: no-repeat;
-    background-size: cover;
-    display: grid;
-}
-
-h1{
-    font-size: 2rem;
-    display: flex;
-    align-self:flex-end;
-}
-form{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 31.25rem;
-    width: 100%;
-        fieldset{
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            margin: 1.25rem;
-            padding: 1.25rem;
-            row-gap: 1.875rem;
-        }
-}
-.index_main{
-    div{
-        height: 100%;
-        span{
-            display: flex;
-            align-items: flex-end;
-        }
-        .carousel-indicators{
-            display:flex ;
-            align-items: flex-end;
-        }
-    }
-}
-ul{
-    display: flex;
-    align-items: flex-end;
-    justify-content: flex-end;
-    row-gap: .4375rem;
-        li{
-            list-style: none;
-            a{
-                text-decoration:none;
-                list-style:none;
-                color:$dark-background;
-                margin: .625rem;
-                display: flex;
-                align-items: baseline;
-                transform: all, 0.7s;
-                    &:hover{
-                    transform:scale(1.05);
-                    color:$element-hover;
-                    }
-            }
-        };
 }
 .icon{
     height: .9375rem;
@@ -147,175 +42,4 @@ ul{
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-}
-.boton{
-    background-color: $dark-background;
-    color: white;
-    border-radius: .375rem;
-    text-decoration: none;
-    padding: .1875rem;
-    transition: all, 0.7s;
-        a{
-            background-color: $dark-background;
-            color: white;
-            text-decoration: none;
-            font-size: 1.5625rem;
-            transition: all, 0.7s;
-                &:hover{
-                    background-color:$element-hover;
-                    transform: scale(1.05);
-                    border-radius: .375rem;
-                }
-        }
-        &:hover{
-            background-color:$element-hover;
-            transform: scale(1.05);
-            border-radius: .375rem;
-        }
-}
-main .nosotros{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    row-gap: .625rem;
-    p{
-    margin-left: .625rem;
-    margin-right: .625rem;
-    }
-        div{
-            display: flex;
-            column-gap: .625rem;
-        }
-}
-.grid{
-    width: 100vw;
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(5, 1fr);
-    grid-template-areas: 
-    "header header header header header header"
-    ". main main main main ."
-    ". main main main main ."
-    ". main main main main ."
-    "footer footer footer footer footer footer"    
-    ;
-}
-/* INICIO DE MEDIA QUERIES */
-@media(max-width:971px){
-    header{
-        display: flex;
-        flex-direction: row;
-        justify-content:space-between;
-        img{
-            height: 9.375rem;
-            width: 9.375rem;
-        }
-    }
-}
-@media(max-width:913px){
-    header{
-        display: flex;
-        flex-wrap: nowrap;
-        img{
-            height: 9.375rem;
-            width: 9.375rem;
-        }
-    }
-
-}
-@media(max-width: 768px){
-    header{
-        display: flex;
-        justify-content: space-around;
-        img{
-            display: none;
-        }
-    }
-    footer{
-        img{
-            display: none;
-        }
-    }
-    .categorias{
-        span{
-            font-size: .9375rem;
-        }
-        a{
-            img{ 
-                height: 3.125rem;
-                width: 3.125rema;
-            }
-        }
-    }
-    footer{
-        display:flex;
-        justify-content: space-between;
-        div{
-            span{
-                display: none;
-                font-size: .625rem;
-                margin-right: .3125rem;
-            }
-            ul{
-                li{
-                    display: flex;
-                    flex-direction: column;
-                }
-            }
-        }
-    }
-    .icon{
-        color:$dark-background;
-    }
-}
-@media(max-width:657px){
-    header{
-        display: flex;
-        flex-wrap: wrap;
-    }
-}
-@media(max-width:425px){
-    header{
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-    }
-    main{
-        margin: 0;
-    }
-    .index_main{
-        div{
-            width: 100%;
-            font-size: 1rem;
-        }
-    }
-    footer{
-        display:flex;
-        justify-content: space-between;
-        span{
-            font-size: .625rem;
-            margin-right: .3125rem;
-        }
-        div{
-            span{
-                display: none;
-            }
-            img{
-                display: none;
-            }
-            ul{
-                li{
-                    display: flex;
-                    flex-direction: column;
-                }
-            }
-        }
-    }
-    .icon{
-        color:$dark-background;
-    }
-    .logo{
-        display: none;
-    }
 }
