--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -4,30 +4,10 @@ main{
     margin: 1.25rem 0px;
     grid-area: main;
 }
-.index_main{
-    div{
-        height: 100%;
-        span{
-            display: flex;
-            align-items: flex-end;
-        }
-        .carousel-indicators{
-            @extend span;
-        }
-    }
-}
-main .nosotros{
-    display: flex;
-    flex-direction: column;
+.nosotros {
+    @include flex-column-center;
     margin: 18.75rem;
+    align-items: center;
     row-gap: 1.25rem;
-    justify-content: center;
-    .sobrenosotros{
-        margin: 3.125rem;
-        text-align: center;
-    }
-        div{
-            padding: 18.75rem;
-            column-gap: .625rem;
-        }
+    flex-direction: row;
 }
