--- a/scss/base/_grids.scss
+++ b/scss/base/_grids.scss
@@ -13,9 +13,9 @@
     grid-template-rows: repeat(5, 1fr);
     grid-template-areas: 
     "header header header header header header"
-    ". main main main main ."
-    ". main main main main ."
-    ". main main main main ."
+    "main main main main main main"
+    "main main main main main main"
+    "main main main main main main"
     "footer footer footer footer footer footer"    
     ;
 }
