--- a/scss/layout/_main.scss
+++ b/scss/layout/_main.scss
@@ -4,7 +4,31 @@ main{
     margin: 1.25rem 0px;
     grid-area: main;
 }
-
+.index_main{
+    display: flex;
+        flex-direction: column;
+    
+    section{
+        div{
+            width: 100%;
+            height: 10rem;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            &:hover{
+                background-color: rgb(248, 131, 89);
+                color:$element-hover;
+                transform: $hovertrans;
+                scale: 1,07;
+            }
+            a{
+                font-size: 20px;
+                text-decoration: none;
+                color: $dark-background ;
+            }
+        }
+    }
+}
 .nosotros{
     column-gap: .625rem;
     article{
