--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,13 @@
     display: none;
   }
 }
+@media (max-width: 403px) {
+  .navbar {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+}
 * {
   margin: 0;
   padding: 0;
@@ -163,7 +170,6 @@ main {
   flex-direction: column;
 }
 .index_main section div {
-  width: 100%;
   height: 10rem;
   display: flex;
   justify-content: center;
@@ -314,6 +320,7 @@ section {
 }
 .categorias span a {
   text-decoration: none;
+  color: #003432;
 }
 
 /*# sourceMappingURL=style.css.map */
