--- a/scss/style.scss
+++ b/scss/style.scss
@@ -47,6 +47,7 @@ section{
     span{
         a{
             text-decoration: none;
+            color: $dark-background;
         }
         
     }
