--- a/scss/utilities/_mediaqueries.scss
+++ b/scss/utilities/_mediaqueries.scss
@@ -116,3 +116,10 @@
         display: none;
     }
 }
+@media(max-width:403px){
+    .navbar{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+}
